# nihonsh

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  Stage1.md  Stage2.md  Stage3.md  builtin.c  builtin.h  command.c  command.h  main.c  nihonsh  prompt.c  prompt.h  test.c  tokenize.c  tokenize.h  util.c  util.h
src/: builtin.cpp  builtin.h  complete.cpp  complete.h  jobs.cpp  jobs.h  main.cpp  parse.cpp  parse.h  prompt.cpp  prompt.h
tests/: test_parse.cpp
